k8s/apps/istio/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.bugparty.net
    - grafana.bugparty.net
    - prometheus.bugparty.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: placeholder
spec:
  hosts:
  - api.bugparty.net
  gateways:
  - istio-system/my-gateway
  http:
  - name: direct-response
    directResponse:
      status: 200
      body:
        string: "Future Home of the bug-party API"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - prometheus.bugparty.net
  gateways:
  - istio-system/my-gateway
  http:
  - name: prometheus
    route:
    - destination:
        host: prometheus-server.observability.svc.cluster.local
        port:
          number: 80 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - grafana.bugparty.net
  gateways:
  - istio-system/my-gateway
  http:
  - name: grafana
    route:
    - destination:
        host: grafana.observability.svc.cluster.local
        port:
          number: 80
